# attestation

./: .env  README.md  pyproject.toml
ElectronicsNetwork/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ElectronicsNetwork/migrations/: 0001_initial.py  0002_alter_product_options_alter_supplier_options_and_more.py  0003_alter_product_model_alter_product_name_and_more.py
ElectronicsNetwork/templates/ElectronicsNetwork/: base.html  product_create.html  supplier_create.html  supplier_delete.html  supplier_info.html  supplier_list.html
ElectronicsNetworkAPI/: apps.py  permissions.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_token.py
users/templates/registration/: logged_out.html  login.html  password_reset_form.html
users/templates/users/: base.html  customuser_confirm_delete.html  customuser_form.html  profile_detail.html
usersAPI/: serializers.py  tests.py  urls.py  views.py
