[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Aptemond <sofartem5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.9"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
django-filter = "^23.5"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.3.0"
drf-yasg = "^1.21.7"
setuptools = "^69.0.3"
django-crispy-forms = "^2.0"
crispy-bootstrap4 = "^2022.1"
pillow = "^10.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
